--- a/ShopifyProject/ShopifyWebParent/ShopifyBackend/src/main/resources/application.properties
+++ b/ShopifyProject/ShopifyWebParent/ShopifyBackend/src/main/resources/application.properties
@@ -1,2 +1,15 @@
 server.port = 8090
 server.servlet.context-path=/shopify-admin
+
+spring.datasource.url=jdbc:mysql://localhost:3306/shopifydb
+spring.datasource.username=root
+spring.datasource.password=root
+
+##JPA/Hibernate properties
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format-sql=true
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
+
+
+
